# summarize-bot

./: .gitignore  FastAPI_features.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: .env.example  main.py  steps_for_langchain_integration
app/api/v1/openai/: ping.py
app/api/v1/routes/: documents.py  evaluations.py  health.py  rag.py  rag_summaries.py  router.py  summaries.py
app/api/v1/schemas/: documents.py  evaluation.py  rag.py  rag_summary.py  summaries.py
app/core/: config.py  logging.py  settings.py
app/db/: init_db.py  session.py
app/exceptions/: documents.py  handlers.py
app/models/: document.py  document_chunk.py
app/services/: document_ingestion.py  documents_text_extractor.py  embedding_service.py  ollama_client.py  openai_client.py  rag_evaluation_service.py  rag_retriever.py  rag_summary_service.py  summarizer.py  text_chunker.py  vector_store.py
docker/: Dockerfile  frontend.Dockerfile
frontend/: app.js  index.html  serve.py  styles.css
