[project]
name = "summarize-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "aiofiles>=24.1.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.40.0",
]
